overflow-x hidden on body to prevent lateral scroll

--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -88,6 +88,7 @@ body {
   color: #000;
   font-size: 1em;
   font-family: 'Fira Sans', sans-serif;
+  overflow-x: hidden;
 }
 
 a{
